--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
     </head>
 
     <body>
-        <h1>Heading</h1>
-        <p>Hello World!</p>
+        <h1>Prediction</h1>
+        <p>Success</p>
 
     </body>
