--- a/templates/model_select.html
+++ b/templates/model_select.html
@@ -13,7 +13,7 @@
     </head>
 
     <body>
-        <form action = "http://localhost:5000/predict" method = "get">
+        <form action = "http://localhost:5000/model_select" method = "get">
         <h1><center>Select Model</center></h1>
         <select name='Model' method='GET' action='/predict'>
             <option value="{{models[0]}}" selected>{{models[0]}}</option>
