--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
 </head>
 <body>
     <div id="controls">
-        <h1>Video Stream</h1>
+        <h1>SLS Defect Detection Web</h1>
         <select id="modelSelect">
             {% for model in models %}
             <option value="{{ model }}">{{ model }}</option>
