--- a/templates/index.html
+++ b/templates/index.html
@@ -1,79 +1,98 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <title>SLS Defect Detection Web</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <style>
-        body, h1, select, button, div {
-            font-family: Arial;
-            right: 25px;
-            top: 25px;
-        }
-        #videoContainer, #predictionContainer {
-            position: fixed;
-            right: 25px;
-            border-radius: 5px;
-            overflow: hidden;
-            text-align: center;
-        }
-        #videoContainer {
-            top: 25px;
-            width: 640px;
-        }
-        #predictionContainer {
-            width: 620px;
-            top: 510px;
-            background: rgba(0, 0, 0, 0.3);
-            padding: 10px;
-            color: white;
-        }
-        #prediction {
-            margin-top: 10px;
-            font-weight: bold;
-        }
-        h1, select, button {
-            margin-left: 10px;
-        }
-        img {
-            width: 100%;
-            height: 480px;
-        }
+      body {
+        width: 80%;
+        display: flex;
+        flex-direction: column;
+        margin: 0rem auto 0rem;
+        font-family: Arial;
+        background-color: #f1f5f9;
+      }
+      h1 {
+        margin: 1rem auto 0rem;
+      }
+      .modelChooser {
+        width: 726px;
+        display: flex;
+        flex-direction: row;
+        margin: 3rem auto 3rem;
+        gap: 1rem;
+      }
+      .modelChooser > select {
+        flex-grow: 7;
+      }
+      .modelChooser > button {
+        flex-grow: 1;
+      }
+      #videoContainer,
+      #predictionContainer {
+        border-radius: 5px;
+        overflow: hidden;
+        text-align: center;
+        margin: auto;
+      }
+      #videoContainer {
+        border: solid black;
+        height: 480px; /* camera resolution is 480px high */
+        width: 720px;
+      }
+      #predictionContainer {
+        background: rgba(0, 0, 0, 0.3);
+        color: white;
+        margin: 0.5rem auto 0rem;
+        width: 726px;
+      }
+      #prediction {
+        font-weight: bold;
+        padding: 1rem 0rem 1rem;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <h1>SLS Defect Detection Web</h1>
-    <select id="modelSelect">
+    <div class="modelChooser">
+      <select id="modelSelect">
         {% for model in models %}
         <option value="{{ model }}">{{ model }}</option>
         {% endfor %}
-    </select>
-    <button onclick="loadVideoFeed()">Load Video Feed</button>
+      </select>
+      <button onclick="loadVideoFeed()">Load Video Feed</button>
+    </div>
+
     <div id="videoContainer">
-        <img id="videoFeed" src="" />
+      <img id="videoFeed" src="" />
     </div>
     <div id="predictionContainer">
-        <div id="prediction">Prediction will appear here</div>
+      <div id="prediction">Prediction will appear here</div>
     </div>
 
     <script>
-        var socket = io.connect('http://' + document.domain + ':' + location.port);
+      var socket = io.connect(
+        "http://" + document.domain + ":" + location.port
+      );
 
-        function loadVideoFeed() {
-            var model = document.getElementById('modelSelect').value;
-            document.getElementById('videoFeed').src = '/video_feed?model=' + model;
+      function loadVideoFeed() {
+        var model = document.getElementById("modelSelect").value;
+        document.getElementById("videoFeed").src = "/video_feed?model=" + model;
+      }
+
+      socket.on("prediction", function (data) {
+        var predictionElement = document.getElementById("prediction");
+        var predictionContainer = document.getElementById(
+          "predictionContainer"
+        );
+        if (data.data === "Defect") {
+          predictionContainer.style.background = "rgba(255, 0, 0, 0.7)";
+        } else {
+          predictionContainer.style.background = "rgba(0, 255, 0, 0.7)";
         }
-
-        socket.on('prediction', function(data) {
-            var predictionElement = document.getElementById('prediction');
-            var predictionContainer = document.getElementById('predictionContainer');
-            if (data.data === 'Defect') {
-                predictionContainer.style.background = 'rgba(255, 0, 0, 0.7)';
-            } else {
-                predictionContainer.style.background = 'rgba(0, 255, 0, 0.7)';
-            }
-            predictionElement.innerHTML = data.data;
-        });
+        predictionElement.innerHTML = data.data;
+      });
     </script>
-</body>
+  </body>
 </html>
